 * 画像プレビューをflickrに対応 (photostreamなど複数の画像がある場合は先頭の画像のみを認識)
 * 実際の操作可能状態とユーザーインターフェースの矛盾を改善。具体的には以下の通り。
   - タブ削除を一度も行っていないときにはタブ削除取り消しメニューを無効化するようにした
   - フォーカスのある発言がProtect発言でReTweetにProtect発言を含めない設定の場合、RT関連メニューを無効化するようにした
   - 詳細表示のコンテキストメニューで状況に応じ「ID振り分けルール作成」の表示を変更していなかったのを修正
   - 詳細表示からの操作において一部のURLがTwitterIDを指しているものと誤認識する場合があったのを修正
   - フォーカスのある発言が自分の発言でない場合、削除メニューを無効化するようにした
==== Ver 0.8.8.4(2010/04/13)
 * 文中URLを開く際に、リンクテキストを表示するように。＠ユーザーやハッシュタグはそのまま表示、短縮URLは短縮前後両方表示するように変更
 * 文中にリンクが複数あると表示に時間がかかる問題を修正
 * 不正なGIFアニメアイコンで各所が赤バッテンになる問題に対応
 * 画像プレビュー領域の初期サイズを画面サイズに合わせて調整するよう変更
 * photoshareの画像リンク抽出で例外が発生する問題に対応
 * アイコンやプレビュー画像など、画像取得のタイムアウトを5秒に変更
 * youtu.beでも画像プレビュー表示するように
 * URL展開にdlvr.itを追加
==== Ver 0.8.8.3(2010/03/24)
 * 起動時FAV取得の設定が無視されるバグ修正
 * 複数行入力状態が復元されないバグ修正
 * nico.ms短縮ロジック取り込み
 * 画像プレビュー実装（imgur/twitpic/yfrog/tweetphoto /Mobypicture/携帯百景/はてなフォトライフ/photoshare/img.ly/brightkite/twitgoo/pic.im /youtube/ニコニコ動画）
 * bkite.com,youtu.beのURL展開に対応
 * 公式RTに対して返信ALLをしたときは、RTした人も返信先に追加するよう変更
==== Ver 0.8.8.2(2010/03/12)
 * 認証エラーが返ってくると、以後更新しなくなってしまうバグ修正
 * API情報取得が正常に動作しないバグ修正
 * 検索タブの遡りで、キャッシュが効いてしまう現象への対処
 * BASIC認証も選べるように（各APIの接続先は共通なので、API制限は共通となります）
 * ProxyAPI対応として、APIの接続先URLの一部を置き換えできるように設定追加
 * 1秒以内の同種のAPIリクエストをキャンセルするように
 * home_timeline,mentions,DirectMessageを遡れるように（Shift-F5,Shift-r）（DMはTwitterが仕様と違う動きをするため取得出来ません）
 * 公式RTに対するQT返信時に、in_reply_toがつかないバグ修正
 * 最小化状態で起動するとレイアウトが崩れる問題に対応（Tweenへのショートカットのプロパティで設定すると最小化状態で起動できます）
 * 投稿時に自動URL短縮される際に、最後のURLしか短縮されない場合があるバグ修正
==== Ver 0.8.8.1(2010/03/3)
 * Webモード廃止
 * OAuth（xAuth）対応（API上限が350へ）
 * URL等のリンク検出ロジックの調整
 * フォロー・アンフォロー等のID指定画面でIDを変更しても、結果画面のIDが変わらないバグ修正
 * 時速表示バグの修正
 * クリップボード操作エラーで例外にならないように
 * ow.lyの短縮URL展開に対応
==== Ver 0.8.8.0(2010/02/23)
 * ふぁぼったーのURLを変更（favotter.matope.com→favotter.netに変更）
==== Ver 0.8.7.0(2010/02/23)
 * 非公式RT/QT時に、半角スペース変換時の文字コードが以前と異なっており、一部のクライアントで文字化けしていた問題を修正
 * WebのHTML仕様変更対応
==== Ver 0.8.6.0(2010/02/16)
 * 検索タブでhtmlのエスケープが不十分だった問題を修正