@@ -15,6 +15,7 @@
    - 詳細表示のコンテキストメニューで状況に応じ「ID振り分けルール作成」の表示を変更していなかったのを修正
    - 詳細表示からの操作において一部のURLがTwitterIDを指しているものと誤認識する場合があったのを修正
    - フォーカスのある発言が自分の発言でない場合、削除メニューを無効化するようにした
+   - PublicSearchタブ、in_reply_to_status_idが設定されていない発言の場合は「返信元ステータスを開く」を無効にするようにした
 ==== Ver 0.8.8.4(2010/04/13)
  * 文中URLを開く際に、リンクテキストを表示するように。＠ユーザーやハッシュタグはそのまま表示、短縮URLは短縮前後両方表示するように変更
  * 文中にリンクが複数あると表示に時間がかかる問題を修正
